"feat: Add New ToDo button and table structure
This commit introduces a 'New ToDo' button and a table structure for displaying ToDo items. The table includes columns for title, description, due date, and priority. ToDo items will be dynamically inserted into the table."

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Todo List</title>
   </head>
   <body>
+    <button id="newTodoButton">New ToDo</button>
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Due Date</th>
+            <th>Priority</th>
+        </tr> 
+        <tbody>
+            <!-- ToDo items will be inserted here -->
+        </tbody>
+    </thead>
+
     <div id="app"></div>
     <script src="dist/main.js"></script>
   </body>
