"feat: Implement 'New ToDo' button functionality
This commit introduces the functionality for the 'New ToDo' button. When clicked, a new ToDo item is created with a title, description, due date, and priority. The new ToDo item is then added as a new row in the ToDo table."

--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
   </head>
   <body>
     <button id="newTodoButton">New ToDo</button>
-    <thead>
+    <table>
+      <thead>
         <tr>
-            <th>Title</th>
-            <th>Description</th>
-            <th>Due Date</th>
-            <th>Priority</th>
-        </tr> 
-        <tbody>
-            <!-- ToDo items will be inserted here -->
-        </tbody>
-    </thead>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Due Date</th>
+          <th>Priority</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- ToDo items will be inserted here -->
+      </tbody>
+    </table>
 
     <div id="app"></div>
-    <script src="dist/main.js"></script>
+    <!-- // dont forget to change back -->
+    <script src="src/index.js"></script>
   </body>
 </html>
