--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <button id="newTodoButton">New ToDo</button>
+    <button id="newProjectButton">New Project</button>
     <select id="projectDropdown">
       <!-- options here -->
       <option value="Default">Default</option>
